<resources>
    <string name="app_name">MyApp</string>
    <string name="star_img">star</string>
    <string name="restorants_text">Рестораны</string>
    <string name="glavnoe_text">Главное</string>
    <string name="kocher_text">Кошер</string>
    <string name="logo_text1">I</string>
    <string name="logo_text2">Kosher</string>
    <string name="course_start_data">Время</string>
    <string name="course_lvl">Уровень</string>
    <string name="restoran">Кошерные рестораны в Москве
        1. Иерусалим адрес: Б.Бронная, 6, стр. 3 м. Тверская, Пушкинская, тел: +7 495 690-62-66
    2. Misha Fisher in Jaffa адрес :Пресненская набережная, 2 5 этаж тел:+7 903 244-38-09
    3. Ереван адрес: ул. Авиаконструктора Микояна, 10 Ходынский бульвар, 4 тел: +7 495 730-51-67</string>
    <string name="kosher">Вот некоторые основы законов кашрута. Некоторые виды животных и их молоко, а также некоторые виды птиц и их яйца разрешены для употребления, тогда как  остальные запрещены, например, свинина, моллюски и многое другое. Мясо и молоко запрещено готовить и употреблять вместе. Для мясного и молочного нельзя использовать одну и ту же посуду, должны быть отдельные наборы посуды, а между принятием в пищу мясного и молочного необходимо сделать определенный перерыв. Разрешенные животные и птицы должны быть забиты определенным способом, предельно безболезненным для животных и чтобы сразу вытекало максимальное количество крови – такой способ называется шхита. Некоторые части, включая кровь теплокровных животных, в пищу запрещены (кровь рыбы разрешена). Фрукты, овощи и крупы в основном всегда кошерны, но должны быть проверены на отсутствие насекомых. Вино, виноградный сок и другие напитки, содержащие виноград, должны быть специально сертифицированы. Даже небольшое количество некошерного вещества или продукта может сделать пищу не пригодной для еды. Все прошедшие обработку продукты питания, фабрики по производству продуктов и рестораны требуют сертификации надежным раввином или специальным агентством по надзору за кашрутом.</string>
    <string name="course_desc">Ингредиенты 2 фунта говяжьего фарша или 2 (10 унций) упаковки вегетарианского заменителя говяжьего фарша 2 больших яйца (взбитых) 1/4 стакана простых хлебных крошек 2 столовые ложки кетчупа 1 столовая ложка горчицы 1 столовая ложка лукового порошка или 1/2 маленькой луковицы (мелко нарезанной) 1 чайная ложка морской или кошерной соли 1/2 чайной ложки черного перца Шаги, чтобы сделать это Если вы используете говяжий фарш, разогрейте бройлер до высокой температуры и выровняйте сковороду с фольгой. Если вы используете вегетарианский заменитель говяжьего фарша, разогрейте духовку до 425 F и выровняйте противень с пергаментной бумагой. В большой миске смешайте говяжий фарш или вегетарианский заменитель говядины, яйца, панировочные сухари, кетчуп, горчицу, луковый порошок (или нарезанный лук), соль и перец. Хорошо перемешать. Чистыми руками сформируйте смесь в 10 пирожков, перенося каждый на подготовленную сковороду для бройлера или противень во время работы. Жарьте или запекайте в предварительно разогретой духовке около 8 минут с каждой стороны, до готовности. Подавайте сразу на булочках с гамбургерами с вашими любимыми начинками.</string>
    <string name="course_desc1">ИНГРЕДИЕНТЫ Кускус 200 г Помидоры 300 г Петрушка по вкусу Лимон 1 штука Оливковое масло 5 столовых ложек Соль, молотый черный перец по вкусу ИНСТРУКЦИЯ ПРИГОТОВЛЕНИЯ Кускус залить кипятком и оставить минут на 20. Нарезать помидоры. Порубить зеленый лук и петрушку (без стеблей). Смешать петрушку, лук, помидоры и кускус. Заправить салат 4–5 столовыми ложками оливкового масла и выжать сок половины лимона. Посолить, поперчить и отправить в холодильник, чтобы салат пропитался. Можно добавить дольки лимона как для декора, так и для вкуса.</string>
</resources>