<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".KosherPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginEnd="347dp"
        android:background="@color/mainleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/restorants"
            android:layout_width="173dp"
            android:layout_height="185dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/restorants_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.616" />

        <TextView
            android:id="@+id/kocher"
            android:layout_width="70dp"
            android:layout_height="113dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:onClick="openKosher"
            android:rotation="-90"
            android:text="@string/kocher_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/restorants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/glavnoe"
            android:layout_width="113dp"
            android:layout_height="213dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/glavnoe_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/restorants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/kocher"
            app:layout_constraintVertical_bias="0.945" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logo_text2"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="32dp"
        android:layout_height="89dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/logo_text1"
        android:textColor="@color/I"
        android:textSize="70sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="298dp"
        android:layout_height="499dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="28dp"
        android:text="@string/restoran"
        android:textSize="23dp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>