<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/coursePageBg"
    tools:context=".CoursePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="64dp"
        android:layout_height="0dp"

        android:layout_marginEnd="347dp"
        android:background="@color/mainleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="52dp"
            android:layout_marginTop="624dp"

            android:contentDescription="@string/star_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/restorants"
            android:layout_width="119dp"
            android:layout_height="217dp"
            android:layout_marginTop="322dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/restorants_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/kocher"
            android:layout_width="70dp"
            android:layout_height="113dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/kocher_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/restorants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/glavnoe"
            android:layout_width="113dp"
            android:layout_height="213dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/glavnoe_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/restorants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/kocher"
            app:layout_constraintVertical_bias="0.995" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/coursePageImage"
        android:layout_width="42dp"
        android:layout_height="7dp"
        android:layout_marginBottom="447dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:transitionName="courseImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"
        app:srcCompat="@drawable/ic_tramezzino" />

    <TextView
        android:id="@+id/coursePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="612dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/courseBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/coursePageText"
        android:layout_width="320dp"
        android:layout_height="479dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/course_desc"
        android:textColor="@color/black"
        android:textSize="11.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout" />

    <ImageButton
        android:id="@+id/addToCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:onClick="addToCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/coursePageText"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_baseline_star_border_24" /><![CDATA[

        android:id="@+id/linearLayout"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/coursePageDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/coursePageTitle">




    ]]>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/course_start_data"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/coursePageImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_margin="10dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/course_lvl"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/coursePageDate"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/coursePageDate"
        android:layout_width="65dp"
        android:layout_height="41dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_weight="1"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/coursePageLvl"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"

        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/coursePageDate"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>