<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="170dp"
                android:layout_height="115dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_food_deluxe_sammich" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/course_start_data"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="88dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/course_lvl"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/courseLvl"
                    android:layout_width="107dp"
                    android:layout_height="76dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>